--- a/scripts/app/container/html_source/report/drugdrug.html
+++ b/scripts/app/container/html_source/report/drugdrug.html
@@ -107,13 +107,13 @@
 
                 <div class="pb-5 border-bottom">
                     <h1 class="mt-0">Interactions between taken or recommended drugs</h1>
-
-                    <h5>No data available.</h5>
+                    <iframe src="primary_drugs_interactions.html" id="iframe-primary-drugs-interactions"
+                            class="bg-light" style="width: 100%; min-height: 600px"></iframe>
                 </div>
                 <div class="py-5">
                     <h1 class="mt-0">All interactions for other drugs</h1>
-
-                    <h5>No data available.</h5>
+                    <iframe src="all_drugs_interactions.html" id="iframe-all-drugs-interactions"
+                            class="bg-light" style="width: 100%; min-height: 600px"></iframe>
                 </div>
                 <div class="alert alert-warning d-flex align-items-center" role="alert">
                     <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
