feat: completed drug-food, esmo and mutations sections

--- a/scripts/app/container/html_source/report/drugdrug.html
+++ b/scripts/app/container/html_source/report/drugdrug.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="py-5">
                     <h1 class="mt-0">All interactions for other drugs</h1>
-                    <iframe src="all_drugs_interactions.html" id="iframe-all-drugs-interactions"
+                    <iframe src="other_primary_interactions.html" id="iframe-all-drugs-interactions"
                             class="bg-light" style="width: 100%; min-height: 600px"></iframe>
                 </div>
                 <div class="alert alert-warning d-flex align-items-center" role="alert">
