feat: completed pharmgkb section

--- a/scripts/app/container/html_source/report/reference.html
+++ b/scripts/app/container/html_source/report/reference.html
@@ -107,9 +107,9 @@
 
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link active" id="mutations-tab" data-bs-toggle="tab"
-                                data-bs-target="#mutations" type="button" role="tab"
-                                aria-controls="mutations" aria-selected="true">
+                        <button class="nav-link active" id="ref-tab" data-bs-toggle="tab"
+                                data-bs-target="#ref" type="button" role="tab"
+                                aria-controls="ref" aria-selected="true">
                             Mutations
                         </button>
                     </li>
@@ -121,9 +121,9 @@
                         </button>
                     </li>
                     <li class="nav-item" role="presentation">
-                        <button class="nav-link" id="off-label-tab" data-bs-toggle="tab"
-                                data-bs-target="#off-label" type="button" role="tab"
-                                aria-controls="off-label" aria-selected="false">
+                        <button class="nav-link" id="off-tab" data-bs-toggle="tab"
+                                data-bs-target="#off" type="button" role="tab"
+                                aria-controls="off" aria-selected="false">
                             Off-label drugs
                         </button>
                     </li>
@@ -136,8 +136,8 @@
                     </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                    <div class="tab-pane fade show active p-3" id="mutations" role="tabpanel"
-                         aria-labelledby="variants-summary-tab">
+                    <div class="tab-pane fade show active p-3" id="ref" role="tabpanel"
+                         aria-labelledby="ref-tab">
                         <table class="table table-hover table-condensed" style="margin-left: auto; margin-right: auto;">
                             <thead>
                                 <tr>
@@ -270,15 +270,15 @@
                         </table>
                     </div>
                     <div class="tab-pane fade p-3" id="pharm" role="tabpanel"
-                         aria-labelledby="clinical-evidence-tab">
+                         aria-labelledby="pharm-tab">
                         <h5>No data available.</h5>
                     </div>
-                    <div class="tab-pane fade p-3" id="off-label" role="tabpanel"
-                         aria-labelledby="variant-details-tab">
+                    <div class="tab-pane fade p-3" id="off" role="tabpanel"
+                         aria-labelledby="off-tab">
                         <h5>No data available.</h5>
                     </div>
                     <div class="tab-pane fade p-3" id="cosmic" role="tabpanel"
-                         aria-labelledby="variant-details-tab">
+                         aria-labelledby="cosmic-tab">
                         <table class="table table-hover table-condensed" style="margin-left: auto; margin-right: auto;">
                             <thead>
                                 <tr>
