--- a/scripts/app/container/html_source/report/pharmgkb.html
+++ b/scripts/app/container/html_source/report/pharmgkb.html
@@ -131,15 +131,39 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active p-3" id="variants-summary" role="tabpanel"
                          aria-labelledby="variants-summary-tab">
-                        <h5>No data available.</h5>
+                        <div class="table-responsive">
+                            <%
+                                if (!is.null(pharmgkb$summary)) {
+                                    cat(pharmgkb$summary)
+                                } else {
+                                    cat("<h5>No data available.</h5>")
+                                }
+                            %>
+                        </div>
                     </div>
                     <div class="tab-pane fade p-3" id="clinical-evidence" role="tabpanel"
                          aria-labelledby="clinical-evidence-tab">
-                        <h5>No data available.</h5>
+                        <div class="table-responsive">
+                            <%
+                                if (!is.null(pharmgkb$evidences)) {
+                                    cat(pharmgkb$evidences)
+                                } else {
+                                    cat("<h5>No data available.</h5>")
+                                }
+                            %>
+                        </div>
                     </div>
                     <div class="tab-pane fade p-3" id="variant-details" role="tabpanel"
                          aria-labelledby="variant-details-tab">
-                        <h5>No data available.</h5>
+                        <div class="table-responsive">
+                            <%
+                                if (!is.null(pharmgkb$details)) {
+                                    cat(pharmgkb$details)
+                                } else {
+                                    cat("<h5>No data available.</h5>")
+                                }
+                            %>
+                        </div>
                     </div>
                 </div>
 
