--- a/scripts/app/container/html_source/report/cosmic.html
+++ b/scripts/app/container/html_source/report/cosmic.html
@@ -124,11 +124,27 @@
                 <div class="tab-content" id="myTabContent">
                     <div class="tab-pane fade show active p-3" id="variants-summary" role="tabpanel"
                          aria-labelledby="variants-summary-tab">
-                        <h5>No data available.</h5>
+                        <div class="table-responsive">
+                            <%
+                                if (!is.null(cosmic$summary)) {
+                                    cat(cosmic$summary)
+                                } else {
+                                    cat("<h5>No data available.</h5>")
+                                }
+                            %>
+                        </div>
                     </div>
                     <div class="tab-pane fade p-3" id="clinical-evidence" role="tabpanel"
                          aria-labelledby="clinical-evidence-tab">
-                        <h5>No data available.</h5>
+                        <div class="table-responsive">
+                            <%
+                                if (!is.null(cosmic$details)) {
+                                    cat(cosmic$details)
+                                } else {
+                                    cat("<h5>No data available.</h5>")
+                                }
+                            %>
+                        </div>
                     </div>
                 </div>
 
@@ -150,34 +166,14 @@
         <script>
             (function () {
                 'use strict';
-                document.querySelectorAll('a.reference').forEach(function (link) {
+                document.querySelectorAll('a.ref-link').forEach(function (link) {
                     link.addEventListener('click', function (event) {
-                        // TODO
-                        function myFunction1 () {
-                            location.replace('reference.html');
-                        }
+                        event.preventDefault();
+                        const id = link.dataset.id;
+                        location.href = 'reference.html' + (id.startsWith('#') ? '' : '#') + id;
                     });
                 });
             })();
-        </script>
-
-
-        <script type="text/javascript">
-            // $('.show-all-start').each(function () {
-            //     var t = $(this);
-            //     t.find('a[role="tab"]').each(function () { $(this).click(); });
-            //     t.find('a[role="tab"]').first().click();
-            // });
-            //
-            // $('a.my_ref_link').click(function () {
-            //     var t = $(this), id = t.data('id'), o = $(id);
-            //     o.parent().parent().addClass('highlight').siblings().removeClass('highlight');
-            //     var tabId = o.closest('.tab-pane').attr('id');
-            //     console.log(tabId);
-            //     o.closest('.tabset').find('a[href="#' + tabId + '"]').click();
-            //     console.log(o.closest('.tabset').find('a[href="#' + tabId + '"]'));
-            //     $('body').scrollTo(id);
-            // });
         </script>
     </body>
 </html>
