--- a/scripts/app/container/html_source/report/pharmgkb.html
+++ b/scripts/app/container/html_source/report/pharmgkb.html
@@ -184,36 +184,76 @@
                 crossorigin="anonymous"></script>
         <script>
             (function () {
-                'use strict'
-                document.querySelectorAll('a.reference')
-                         .forEach(function (link) {
-                    link.addEventListener('click', function (event) {
-                        // TODO
-                        function myFunction1 () {
-                            location.replace('reference.html');
+                'use strict';
+                const clinicalEvidencePane = document.getElementById('clinical-evidence');
+                const clinicalEvidenceTab = document.querySelector('button[data-bs-target="#clinical-evidence"]');
+                const clinicalEvidenceTabObject = new bootstrap.Tab(clinicalEvidenceTab);
+                const variantsSummaryPane = document.getElementById('variants-summary');
+                const variantsSummaryTab = document.querySelector('button[data-bs-target="#variants-summary"]');
+                const variantsSummaryTabObject = new bootstrap.Tab(variantsSummaryTab);
+
+                document.querySelectorAll('a.evidence-details-link').forEach((link) => {
+                    link.addEventListener('click', (event) => {
+                        event.preventDefault();
+                        const id = link.dataset.id;
+                        if (id) {
+                            const evidenceDetail = document.querySelector(id);
+                            if (evidenceDetail) {
+                                clinicalEvidencePane.querySelectorAll('tr.table-success').
+                                                     forEach((tr) => tr.classList.remove('table-success'));
+                                const listener = () => {
+                                    const trObject = evidenceDetail.closest('tr');
+                                    trObject.classList.add('table-success');
+                                    setTimeout(() => trObject.classList.remove('table-success'), 2000);
+                                    window.scrollTo({
+                                        behavior: 'smooth',
+                                        left: 0,
+                                        top: trObject.offsetTop,
+                                    });
+                                    clinicalEvidenceTab.removeEventListener('shown.bs.tab', listener);
+                                };
+                                clinicalEvidenceTab.addEventListener('shown.bs.tab', listener);
+                                clinicalEvidenceTabObject.show();
+                            }
                         }
-                    })
-                })
-            })()
-        </script>
+                    });
+                });
 
+                document.querySelectorAll('a.evidence-summary-link').forEach((link) => {
+                    link.addEventListener('click', (event) => {
+                        event.preventDefault();
+                        const id = link.dataset.id;
+                        if (id) {
+                            const summary = document.querySelector(id);
+                            if (summary) {
+                                variantsSummaryPane.querySelectorAll('tr.table-success').
+                                                    forEach((tr) => tr.classList.remove('table-success'));
+                                const listener = () => {
+                                    const trObject = summary.closest('tr');
+                                    trObject.classList.add('table-success');
+                                    setTimeout(() => trObject.classList.remove('table-success'), 2000);
+                                    window.scrollTo({
+                                        behavior: 'smooth',
+                                        left: 0,
+                                        top: trObject.offsetTop,
+                                    });
+                                    variantsSummaryTab.removeEventListener('shown.bs.tab', listener);
+                                };
+                                variantsSummaryTab.addEventListener('shown.bs.tab', listener);
+                                variantsSummaryTabObject.show();
+                            }
+                        }
+                    });
+                });
 
-        <script type="text/javascript">
-            // $('.show-all-start').each(function () {
-            //     var t = $(this);
-            //     t.find('a[role="tab"]').each(function () { $(this).click(); });
-            //     t.find('a[role="tab"]').first().click();
-            // });
-            //
-            // $('a.my_ref_link').click(function () {
-            //     var t = $(this), id = t.data('id'), o = $(id);
-            //     o.parent().parent().addClass('highlight').siblings().removeClass('highlight');
-            //     var tabId = o.closest('.tab-pane').attr('id');
-            //     console.log(tabId);
-            //     o.closest('.tabset').find('a[href="#' + tabId + '"]').click();
-            //     console.log(o.closest('.tabset').find('a[href="#' + tabId + '"]'));
-            //     $('body').scrollTo(id);
-            // });
+                document.querySelectorAll('a.ref-link').forEach(function (link) {
+                    link.addEventListener('click', function (event) {
+                        event.preventDefault();
+                        const id = link.dataset.id;
+                        location.href = 'reference.html' + (id.startsWith('#') ? '' : '#') + id;
+                    });
+                });
+            })();
         </script>
     </body>
 </html>
