--- a/scripts/app/container/html_source/report/therapeutic.html
+++ b/scripts/app/container/html_source/report/therapeutic.html
@@ -197,13 +197,15 @@
                     </div>
                     <div class="tab-pane fade p-3" id="variant-details" role="tabpanel"
                          aria-labelledby="variant-details-tab">
-                        <%
-                            if (!is.null(therapeutic_indications$details)) {
-                                cat(therapeutic_indications$details)
-                            } else {
-                                cat("<h5>No data available.</h5>")
-                            }
-                        %>
+                        <div class="table-responsive">
+                            <%
+                                if (!is.null(therapeutic_indications$details)) {
+                                    cat(therapeutic_indications$details)
+                                } else {
+                                    cat("<h5>No data available.</h5>")
+                                }
+                            %>
+                        </div>
                     </div>
                 </div>
 
@@ -244,6 +246,7 @@
                                 const listener = () => {
                                     const trObject = evidenceDetail.closest('tr');
                                     trObject.classList.add('table-success');
+                                    setTimeout(() => trObject.classList.remove('table-success'), 2000);
                                     window.scrollTo({
                                         behavior: 'smooth',
                                         left: 0,
@@ -270,6 +273,7 @@
                                 const listener = () => {
                                     const trObject = summary.closest('tr');
                                     trObject.classList.add('table-success');
+                                    setTimeout(() => trObject.classList.remove('table-success'), 2000);
                                     window.scrollTo({
                                         behavior: 'smooth',
                                         left: 0,
